name:                my-xmonad
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
author:              Rupert Horlick
maintainer:          Rupert Horlick
build-type:          Simple
cabal-version:       >=1.10

executable my-xmonad
  main-is:             xmonad.hs
  build-depends:       base
                     , directory
                     , X11
                     , containers
                     , typed-process
                     , xmonad
                     , xmonad-contrib
  default-language:    Haskell2010

  ghc-options:         -Wall
